# python_web

./: .gitignore
homeworks/homework_01/: README.md  book_methods.py  bot.py  commands.py  fields.py  format.py  iterators.py  main.py  note.py  notes_methods.py  output.py  record.py  test_notes.py
homeworks/homework_02/console_bot/: .dockerignore  README.md  dockerfile  dockerfile.old  pyproject.toml  requirements.txt  start.py
homeworks/homework_02/console_bot/console_bot/: __init__.py  book_methods.py  bot.py  commands.py  currency_rates.py  exceptions.py  fields.py  iterators.py  logger.py  main.py  note.py  notes_methods.py  output.py  record.py
homeworks/homework_02/console_bot/tests/: test_notes.py
homeworks/homework_11/: main.py  pyproject.toml
homeworks/homework_11/migrations/versions/: 66fe5beed437_init.py  c662dd36e9fc_init.py
homeworks/homework_11/src/: schemas.py
homeworks/homework_11/src/database/: config.ini  db.py  models.py
homeworks/homework_11/src/repository/: contacts.py
homeworks/homework_11/src/routes/: contacts.py
homeworks/homework_12/: README.md  main.py  pyproject.toml
homeworks/homework_12/migrations/: env.py
homeworks/homework_12/migrations/versions/: 142209a5b351_add_roles.py  18c9501e8f6c_add_table_users3.py  28eb546a4369_init.py  3ba2339364a0_add_table_users.py  8d16da6f4b07_add_table_users2.py  97d3734b7039_add_table_users1.py
homeworks/homework_12/src/: schemas.py
homeworks/homework_12/src/database/: db.py  models.py
homeworks/homework_12/src/repository/: contacts.py  users.py
homeworks/homework_12/src/routes/: auth.py  contacts.py
homeworks/homework_12/src/services/: auth.py  roles.py
homeworks/homework_13/: README.md  docker-compose.yml  main.py  pyproject.toml  test.db
homeworks/homework_13/docs/: conf.py  index.rst
homeworks/homework_13/docs/_build/doctrees/: environment.pickle  index.doctree
homeworks/homework_13/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
homeworks/homework_13/migrations/: env.py
homeworks/homework_13/migrations/versions/: 23466e4eeac6_init.py  26a258316ce9_add_avatar_column.py
homeworks/homework_13/src/: schemas.py
homeworks/homework_13/src/conf/: config.py
homeworks/homework_13/src/database/: db.py  models.py
homeworks/homework_13/src/repository/: contacts.py  users.py
homeworks/homework_13/src/routes/: auth.py  contacts.py  users.py
homeworks/homework_13/src/services/: auth.py  email.py  roles.py
homeworks/homework_13/src/services/templates/: verify_email.html
homeworks/homework_13/tests/: conftest.py  tests_route_contacts.py  tests_unit_repository_contacts.py  tests_unit_repository_users.py
lessons/01/: 03.py  (+4 more)
lessons/12_fastapi-users/: main.py  pyproject.toml  test.db
(+126 files in other folders)
